k8s/tools/filebrowser.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      serviceAccountName: tailscale
      nodeSelector:
        kubernetes.io/hostname: k3s-master
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:latest
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: ssd
          mountPath: /srv/ssd
        - name: kanokgan-drive
          mountPath: /srv/kanokgan-drive
          readOnly: true
        - name: media
          mountPath: /srv/media
          readOnly: true
        - name: nrop
          mountPath: /srv/nrop
          readOnly: true
        - name: k3s-storage
          mountPath: /srv/k3s-storage
        - name: database
          mountPath: /database
        - name: config
          mountPath: /config
      
      - name: tailscale
        image: ghcr.io/tailscale/tailscale:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: tailscale-state
          mountPath: /var/lib/tailscale
        - name: tailscale-config
          mountPath: /config
      
      volumes:
      - name: ssd
        hostPath:
          path: /mnt/ssd
          type: Directory
      - name: k3s-storage
        hostPath:
          path: /var/lib/rancher/k3s/storage
          type: Directory
      - name: kanokgan-drive
        nfs:
          server: 192.168.0.243
          path: /volume1/KanokganDrive
          readOnly: true
      - name: media
        nfs:
          server: 192.168.0.243
          path: /volume1/Media
          readOnly: true
      - name: nrop
        nfs:
          server: 192.168.0.243
          path: /volume1/Nrop
          readOnly: true
      - name: database
        hostPath:
          path: /mnt/ssd/filebrowser/database
          type: DirectoryOrCreate
      - name: config
        hostPath:
          path: /mnt/ssd/filebrowser/config
          type: DirectoryOrCreate
      - name: tailscale-state
        emptyDir: {}
      - name: tailscale-config
        configMap:
          name: tailscale-config
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: tools
spec:
  selector:
    app: filebrowser
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
